Fixed overlapping footer
Implemented .footer in css to add a top margin.

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -68,3 +68,7 @@ p {
 .chat.inverted.icon{
   margin: 0 0.05em 0 0.05em !important;
 }
+
+.footer {
+  margin-top: 0.5%;
+}
